[package]
name = "birthday_calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
ics = "0.5.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
uuid = { version = "1.6.1", features = ["v4"] }
